- change announcement status - blacklist user
